# ticktask

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml  requirements.txt  setup.py
config/: default.yaml
src/: main.py
src/api/: projects.py
src/utils/: config.py
tests/: test_models.py
ticktask/api/: auth.py  client.py  models.py  tasks.py
ticktask/commands/: auth.py  project.py  task.py  workflow.py
ticktask/integrations/: obsidian.py
ticktask/utils/: formatting.py
